Renamed the app

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <script src="aframe.min.js"></script>
     <script src="aframe-ar.js"></script>
-    <title>Visitor App</title>
+    <title>PWA Basics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
